--- a/JS/Mon dossier/08-DOM/TP-2/style.css
+++ b/JS/Mon dossier/08-DOM/TP-2/style.css
@@ -8,7 +8,7 @@ body {
   height: 100dvh;
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: center;
   background: linear-gradient(#e66465, #9198e5);
 }
 main {
@@ -31,7 +31,7 @@ h1 {
   width: 90%;
   font-size: 2.4rem;
 }
-#screen {
+.screen {
   background-color: rgb(168, 196, 221);
   border-radius: 10px;
   padding: 20px;
@@ -39,11 +39,13 @@ h1 {
   width: 100%;
   margin-bottom: 20px;
   color: black;
-  font-size: 1.7rem;
+  font-size: 2rem;
   display: flex;
   justify-content: end;
+  align-items: end;
+  overflow: hidden;
 }
-#touche {
+.touches {
   display: grid;
   grid: 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr;
   height: 70%;
