--- a/VueJS/Exercice/Exo5/src/style.css
+++ b/VueJS/Exercice/Exo5/src/style.css
@@ -1,1 +1,16 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
+body {
+  background-color: hsl(0, 0%, 25%);
+  color: hsl(0, 0%, 90%);
+}
+#app {
+  margin: 3dvh 3dvw;
+  border: 2px solid wheat;
+  border-radius: 1.5rem;
+  padding: 2rem;
+}
